feat: message sending and receiving